tests/render_snapshots/snapshots/render_snapshots__overlays__command_palette_overlay.snap
---
source: tests/render_snapshots/overlays.rs
expression: output
---
test_project | test_db | - | no dsn | localhost:5432/test                       
┌ [1] Explorer ────┐[Info] [Cols] [Idx] [FK] [RLS] [Trig] [DDL]                 
│> public.users    │┌ [2] Inspector ───────────────────────────────────────────┐
│  public.posts    ││(select a table)                                          │
│  public.comments ││                                                          │
│                  ││                                                          │
│                  │╭ Command Palette ─────────────────────╮                   │
│                  ││  q                  Quit application │                   │
│                  ││  ?                  Toggle help      │                   │
│                  ││  Ctrl+P             Open Table Picker│                   │
│                  ││  f                  Toggle Focus mode│                   │
│                  ││  r                  Reload metadata  │───────────────────┘
│                  ││  s                  Open SQL Editor  │───────────────────┐
│                  ││  e                  Open ER Diagram  │                   │
│                  ││  c                  Open Connection S│                   │
│                  ││  Ctrl+E             Export result to │                   │
│                  ││  Ctrl+R             Enable Read-Only │                   │
│                  │╰ j/k / ↑↓ Navigate │ Enter Select │ Es╯                   │
│                  ││                                                          │
│                  ││                                                          │
│                  ││                                                          │
└──────────────────┘└──────────────────────────────────────────────────────────┘
Enter:Execute  j/k / ↑↓:Navigate  Esc:Close
