tests/render_snapshots/snapshots/render_snapshots__overlays__query_history_picker_filter_mode.snap
---
source: tests/render_snapshots/overlays.rs
expression: output
---
test_project | - | - | no dsn | localhost:5432/test                             
┌ [1] Explorer ────┐[Info] [Cols] [Idx] [FK] [RLS] [Trig] [DDL]                 
│ Press 'r' to load│┌ [2] Inspector ───────────────────────────────────────────┐
│                  ││(select a table)                                          │
│                  ││                                                          │
│                  ││                                                          │
│                  ││                                                          │
│           ╭ Query History ───────────────────────────────────────╮           │
│           │  > user█                                             │           │
│           │▸ ✓ SELECT * FROM users             Mar 13 10:00 UTC  │           │
│           │                                                      │           │
│           │                                                      │───────────┘
│           │                                                      │───────────┐
│           │                                                      │           │
│           │                                                      │           │
│           │                                                      │           │
│           │                                                      │           │
│           ╰ 1 entries │ type to filter │ Enter Select ───────────╯           │
│                  ││                                                          │
│                  ││                                                          │
│                  ││                                                          │
└──────────────────┘└──────────────────────────────────────────────────────────┘
Enter:Select  type:Filter  ↑↓:Navigate  Esc:Close
