tests/render_snapshots/snapshots/render_snapshots__overlays__sql_modal_compare_tab_narrow_stacked.snap
---
source: tests/render_snapshots/overlays.rs
expression: output
---
test_project | - | - | no dsn | localhost:5432/tes
┌ [1] Explor┐[Info] [Cols] [Idx] [FK] [RLS] [Trig]
│ Press 'r' │┌ [2] Inspector ────────────────────┐
│           ││(select a table)                   │
│           ││                                   │
│    ╭ SQL Editor ── [SQL] [Plan] [Compare] ╮    │
│    │  ↓ Improved                          │    │
│    │                                      │    │
│    │   • Total cost: 1000.00 → 8.30       │    │
│    │ (-99.2%)                             │    │
│    │   • Seq Scan on users → Index Scan   │    │
│    │ using idx_users_id on users          │────┘
│    │   • Estimated rows: 2550 → 1         │────┐
│    │                                      │    │
│    │  ──────────────────────────────────  │    │
│    │                                      │    │
│    │ ──────────────────────────────────── │    │
│    │  [NORMAL]                     Ready  │    │
│    ╰ ^E: Explain │ ↑↓: Scroll │ Tab: Switc╯    │
│           ││                                   │
│           ││                                   │
└───────────┘└───────────────────────────────────┘
